add base structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
+
+    <header class="main-header">
+        <div class="container header-content">
+            <h1>PIXYT</h1>
+            <div class="input-wrapper">
+                <input type="number" name="width" value="60" id="width">
+                <input type="number" name="height" value="30" id="height">
+            </div>
+            <button>reset</button>
+        </div>        
+    </header>
+
+    <main>
+        <div class="container color-wrapper">
+            <ul class="color-list">
+                <li>
+                    <span class="color-item"></span>
+                </li>
+                <li>
+                    <span class="color-item"></span>
+                </li>
+                <li>
+                    <span class="color-item"></span>
+                </li>
+            </ul>
+        </div>
+
+        <div class="canvas">
+            grid
+        </div>
+        
+    </main>
+
     <script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
