--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input type="number" name="width" value="60" id="width">
                 <input type="number" name="height" value="30" id="height">
             </div>
-            <button>reset</button>
+            <button id="reset">reset</button>
         </div>        
     </header>
 
@@ -35,10 +35,12 @@
             </ul>
         </div>
 
-        <div class="canvas">
-            grid
+        <div class="canvas-wrapper">
+            <div class="canvas">
+                
+            </div>
         </div>
-        
+
     </main>
 
     <script type="text/javascript" src="./js/app.js"></script>
